--- a/screen2.html
+++ b/screen2.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Light Theme</title>
-<link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
+<link href="singlePageTemplate.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
@@ -17,7 +17,7 @@
     <![endif]-->
 </head>
 <body>
-<!-- Main Container -->
+<!-- Main Container -->store
 <div class="container"> 
   <!-- Navigation -->
   <header>
@@ -25,17 +25,17 @@
   </header>
   <!-- Hero Section -->
   <section class="hero" id="hero">	
-	  <div class="store">
+	  <div class="store" onClick="window.location.href='screen3.html'">
 			<h2> Target </h2>	 
 		  	<p>255 Greenwich St, New York, NY 10007</p>
 	  </div>
 	  
-	  <div class="store">
+	  <div class="store" onClick="window.location.href='screen3.html'">
 			<h2> Trader Joe's </h2>	 
 		  	<p>142 E 14th St, New York, NY 10003</p>
 	  </div>
 	  
-	  <div class="store">
+	  <div class="store" onClick="window.location.href='screen3.html'">
 			<h2> Whole Foods </h2>	 
 		  	<p>4 Union Square W, New York, NY 10003</p>
 	  </div>
