--- a/screen3.html
+++ b/screen3.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Light Theme</title>
-<link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
+<link href="singlePageTemplate.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
@@ -29,7 +29,9 @@
 	  <h2> Select items for your grocery list</h2>
 	  
 	  <form action="screen2.html">
-			<h4> Search items: <input type="text" name="search"><br></h4>
+			<h4> Search items: <input type="text" name="search">
+				<button type="button">Search</button>
+				<br></h4>
     	</form>	
 	  
 	<div id = "scrollbar">
