--- a/screen3.html
+++ b/screen3.html
@@ -9,6 +9,22 @@
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+	var cart = [];
+$(document).ready(function(){
+    $(".item").click(function(){
+        cart.push($(this).siblings('p').text());
+		console.log($(this).siblings('p').text());
+    });
+});
+	
+	function showGroceryList(){
+		localStorage.setItem("cartKey",JSON.stringify(cart))
+		var cartItems = JSON.parse(localStorage.getItem("cartKey"));
+		console.log(cartItems);
+	}
+</script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -37,12 +53,12 @@
 	<div id = "scrollbar">
 	  <div class="cards">
 	  	<p>Eggs</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 	  
 	   <div class="cards">
 	  	<p>Milk</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 	  
 	   <div class="cards">
@@ -52,7 +68,7 @@
 	  
 	  <div class="cards">
 	  	<p>Juice</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 	  
 	  <div class="cards">
@@ -156,7 +172,10 @@
 		
 	</div>
 	  <p class="center">
-		<button class="button" type="submit" value="Submit" onClick="window.location.href='screen4.html'">View Grocery List</button><br>
+		<!--
+<button class="button" type="submit" value="Submit" onClick="window.location.href='screen4.html'">View Grocery List</button><br>
+-->
+	<button class="button" type="submit" value="Submit" onClick="showGroceryList()">View Grocery List</button><br>	  
 	  </p>
 	  
   </section>
