Updated code for local storage
JSON object created here can be used to retrieve location from database and displayed in screen 4

--- a/screen3.html
+++ b/screen3.html
@@ -63,7 +63,7 @@ $(document).ready(function(){
 	  
 	   <div class="cards">
 	  	<p>Juice</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 	  
 	  <div class="cards">
@@ -73,101 +73,42 @@ $(document).ready(function(){
 	  
 	  <div class="cards">
 	  	<p>Juice</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 	  
 	  <div class="cards">
 	  	<p>Juice</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 	  
 	  <div class="cards">
 	  	<p>Juice</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 	  
 	  <div class="cards">
 	  	<p>Juice</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 	  
 	  <div class="cards">
 	  	<p>Juice</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
+	  </div>
+		
+		<div class="cards">
+	  	<p>Juice</p>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 	  
 	  <div class="cards">
 	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 	  
 	  <div class="cards">
 	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
-	  </div>
-	  
-	  <div class="cards">
-	  	<p>Juice</p>
-		<button type="button">Add to List</button>
+		<button type="button" class="item">Add to List</button>
 	  </div>
 		
 	</div>
