--- a/screen3.html
+++ b/screen3.html
@@ -13,7 +13,7 @@
 <script>
 	var cart = [];
 $(document).ready(function(){
-    $(".item").click(function(){
+	$(".item").click(function(){
         cart.push($(this).siblings('p').text());
 		console.log($(this).siblings('p').text());
     });
@@ -51,7 +51,18 @@ $(document).ready(function(){
     	</form>	
 	  
 	<div id = "scrollbar">
-	  <div class="cards">
+	
+	<script>
+		var JSONitems = JSON.parse('["Eggs","Milk","Juice","cereal"]');
+		var item;
+		for (item in JSONitems){
+		var txt1 = " <div class=\"cards\"><p>"+JSONitems[item]+" </p>	<button type=\"button\" class=\"item\">Add to List</button> </div>";
+		$("#scrollbar").append(txt1);
+	}
+	</script>	
+		
+		
+	 <!-- <div class="cards">
 	  	<p>Eggs</p>
 		<button type="button" class="item">Add to List</button>
 	  </div>
@@ -109,7 +120,7 @@ $(document).ready(function(){
 	  <div class="cards">
 	  	<p>Juice</p>
 		<button type="button" class="item">Add to List</button>
-	  </div>
+	  </div>   -->
 		
 	</div>
 	  <p class="center">
