--- a/screen3.html
+++ b/screen3.html
@@ -9,21 +9,43 @@
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 	var cart = [];
-$(document).ready(function(){
-	$(".item").click(function(){
-        cart.push($(this).siblings('p').text());
-		console.log($(this).siblings('p').text());
-    });
-});
+	$(document).ready(function(){
+		$(".item").click(function(){
+			cart.push($(this).siblings('p').text());
+			console.log($(this).siblings('p').text());
+		});
+	});
 	
+	$(".card").ready(function(){
+	$("#searchText").on("keyup", function() {
+    var g = $(this).val().toLowerCase();
+    $(".cards").children("p").each(function() {
+        var s = $(this).text().toLowerCase();
+		console.log(s+" "+g);
+		$(this).parent()[ s.indexOf(g) !== -1 ? 'show' : 'hide' ]();
+	});
+	});
+			
 	function showGroceryList(){
 		localStorage.setItem("cartKey",JSON.stringify(cart))
 		var cartItems = JSON.parse(localStorage.getItem("cartKey"));
 		console.log(cartItems);
 	}
+
+	$("#scrollbar").ready(function(){
+	var JSONitems = JSON.parse('["Eggs","Milk","Juice","cereal"]');
+	var item;
+	for (item in JSONitems){
+	var txt1 = " <div class=\"cards\"><p>"+JSONitems[item]+" </p>	<button type=\"button\" class=\"item\">Add to List</button> </div>";
+	$("#scrollbar").append(txt1);
+	}
+	});
+
+});
+	
 </script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -45,23 +67,11 @@ $(document).ready(function(){
 	  <h2> Select items for your grocery list</h2>
 	  
 	  <form action="screen2.html">
-			<h4> Search items: <input type="text" name="search">
-				<button type="button">Search</button>
-				<br></h4>
+			<h4> Search items: <input type="text" name="search" id="searchText"><br></h4>
     	</form>	
 	  
 	<div id = "scrollbar">
 	
-	<script>
-		var JSONitems = JSON.parse('["Eggs","Milk","Juice","cereal"]');
-		var item;
-		for (item in JSONitems){
-		var txt1 = " <div class=\"cards\"><p>"+JSONitems[item]+" </p>	<button type=\"button\" class=\"item\">Add to List</button> </div>";
-		$("#scrollbar").append(txt1);
-	}
-	</script>	
-		
-		
 	 <!-- <div class="cards">
 	  	<p>Eggs</p>
 		<button type="button" class="item">Add to List</button>
