--- a/screen1.html
+++ b/screen1.html
@@ -10,6 +10,7 @@
 <script> var __adobewebfontsappname__="dreamweaver" </script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="http://jquery-json.googlecode.com/files/jquery.json-1.3.min.js"></script>
 <script>
 	//Attach a submit handler to the form "searchStoreByZip"
 	$("#searchStoreByZip").submit(function(event){
@@ -39,10 +40,10 @@
   <section class="hero" id="hero">
 		<form action="screen2.html" id="searchStoreByZip">
 			<h2 class="hero_header">
-				Enter ZIP: <input type="text" name="zip"><br><br>
+				Enter ZIP: <input type="text" name="zip" placeholder="Zip Code"><br><br>
 				<!--<input type="submit" value="Submit" onClick="window.location.href='screen2.html'">-->
 				<!--<button class="button" type="submit" value="Submit" onClick="window.location.href='screen2.html'">Go</button>-->
-				<button class="button" type="submit" value="Submit" onClick="showStoreList()">Go</button>
+				<button class="button" type="submit" value="Search">Go</button>
 			</h2>
     	</form>	
   </section>
