--- a/screen2.html
+++ b/screen2.html
@@ -17,6 +17,7 @@
     <![endif]-->
 </head>
 <body>
+You searched for stores in area code <?php echo $_POST["zip"]; ?>
 <!-- Main Container -->store
 <div class="container"> 
   <!-- Navigation -->
