--- a/category.html
+++ b/category.html
@@ -75,7 +75,7 @@
 	});		
 
 	$("#scrollbar").ready(function(){
-	var JSONitems = JSON.parse('["Eggs","Milk","Juice","cereal"]');
+	var JSONitems = JSON.parse('["Eggs","Milk","Juice","Cereal","Coffee","Beverages","Candy","Meat","Bread","Chips"]');
 	var item;
 	for (item in JSONitems){
 	var txt1 = " <div class=\"cards\"><p>"+JSONitems[item]+"</p>	<button type=\"button\" class=\"item\">Add to List</button> </div>";
@@ -103,7 +103,7 @@
 
 </head>
 <body>
-	<div class="container demo-2" id="home">
+	<div class="container demo-2">
 	<header>
                 
 
