--- a/list.html
+++ b/list.html
@@ -69,12 +69,12 @@
 </header>
 	<!--#carbonads-container-->
 			
-	
+	<body>
 
-        <main role="main">
-  <section class="hero">	
+        <main>
+  <section>	
 	
-	<table style="margin-left:20%; margin-top:-5%;">
+	<table>
    	<thead >
 	<tr>
 	 <td>Item</td>
@@ -101,15 +101,15 @@
 		 
 		<tr>
 		 <td>Juice</td>
-		  <td>A3</td>
+		  <td>C2</td>
 		  <td><input type="checkbox" name="Mark" value="Juice"></td>
 		  <td><input type="checkbox" name="Delete" value="Juice"></td>
 		</tr>
 		 
 		 
 		 	<tr>
-		 <td>Juice</td>
-		  <td>B3</td>
+		 <td>Coffee</td>
+		  <td>D5</td>
 		  <td><input type="checkbox" name="Mark" value="Juice"></td>
 		  <td><input type="checkbox" name="Delete" value="Juice"></td>
 		</tr>
@@ -117,155 +117,19 @@
 		 
 		 
 		 	<tr>
-		 <td>Juice</td>
-		  <td>B6</td>
+		 <td>Bread</td>
+		  <td>H2</td>
 		  <td><input type="checkbox" name="Mark" value="Juice"></td>
 		  <td><input type="checkbox" name="Delete" value="Juice"></td>
 		</tr>
 		 
-		 
-		 	<tr>
-		 <td>Juice</td>
-		  <td>H5</td>
+		  	<tr>
+		 <td>Chips</td>
+		  <td>K12</td>
 		  <td><input type="checkbox" name="Mark" value="Juice"></td>
 		  <td><input type="checkbox" name="Delete" value="Juice"></td>
 		</tr>
-		 
-		 	<tr>
-		 <td>Juice</td>
-		  <td>I2</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 <tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
-		 		<tr>
-		 <td>Juice</td>
-		  <td>M1</td>
-		  <td><input type="checkbox" name="Mark" value="Juice"></td>
-		  <td><input type="checkbox" name="Delete" value="Juice"></td>
-		</tr>
+	
 	</tbody>	 
 	</table>
 
